--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">129</b></p>
+        <p align="center">Total number of members: <b class="ref">134</b></p>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
           <thead>
@@ -344,6 +344,13 @@
               <td><a href="../files/coca-colus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">contrairus</a></td>
+              <td>
+                <p><img src="../files/contrairus.jpeg"></p>
+              </td>
+              <td><a href="../files/contrairus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>cosmonus</td>
               <td>
                 <p><img src=../files/cosmonus.jpeg></p>
@@ -419,6 +426,13 @@
                 <p><img src=../files/educatus.jpeg></p>
               </td>
               <td><a href="../files/educatus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">enormongus</a></td>
+              <td>
+                <p><img src="../files/enormongus.jpeg"></p>
+              </td>
+              <td><a href="../files/enormongus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>fishus</td>
@@ -877,6 +891,13 @@
               <td><a href="../files/spidermanus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">stevus</a></td>
+              <td>
+                <p><img src="../files/stevus.jpeg"></p>
+              </td>
+              <td><a href="../files/stevus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja">stickmus</a></td>
               <td>
                 <p><img src=../files/stickmus.jpeg></p>
@@ -940,6 +961,13 @@
               <td><a href="../files/tornadus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">trollus</a></td>
+              <td>
+                <p><img src="../files/trollus.jpeg"></p>
+              </td>
+              <td><a href="../files/trollus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Lili">turkus</a></td>
               <td>
                 <p><img src=../files/turkus.jpeg></p>
@@ -966,6 +994,13 @@
                 <p><img src=../files/vegetus.jpeg></p>
               </td>
               <td><a href="../files/vegetus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">villajus</a></td>
+              <td>
+                <p><img src="../files/villajus.jpeg"></p>
+              </td>
+              <td><a href="../files/villajus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>virus</td>
@@ -1063,12 +1098,12 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Acknowledgements</h2>
-        <p>Thanks to the <b class="ref">20</b> artists:</p>
+        <p>Thanks to the <b class="ref">21</b> artists:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stickmus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
@@ -1086,6 +1121,7 @@
           <li id="AN-Abat"><b>Abat</b> for <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> for <code>ahmonzbobus</code>,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> for <code>crashus</code> and <code>questionus</code>,</li>
+          <li id="AN-Benjaminouille"><b>Benjaminouille</b> for <code>enormongus</code> and <code>villajus</code></li>
         </ul>
         <p>Caption:</p>
         <ul>
