--- a/fr/index.html
+++ b/fr/index.html
@@ -107,7 +107,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">129</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">134</b></p>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
           <thead>
@@ -343,6 +343,13 @@
               <td><a href="../files/coca-colus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">contrairus</a></td>
+              <td>
+                <p><img src="../files/contrairus.jpeg"></p>
+              </td>
+              <td><a href="../files/contrairus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>cosmonus</td>
               <td>
                 <p><img src=../files/cosmonus.jpeg></p>
@@ -418,6 +425,13 @@
                 <p><img src=../files/educatus.jpeg></p>
               </td>
               <td><a href="../files/educatus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">enormongus</a></td>
+              <td>
+                <p><img src="../files/enormongus.jpeg"></p>
+              </td>
+              <td><a href="../files/enormongus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>fishus</td>
@@ -876,6 +890,13 @@
               <td><a href="../files/spidermanus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">stevus</a></td>
+              <td>
+                <p><img src="../files/stevus.jpeg"></p>
+              </td>
+              <td><a href="../files/stevus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja">stickmus</a></td>
               <td>
                 <p><img src=../files/stickmus.jpeg></p>
@@ -939,6 +960,13 @@
               <td><a href="../files/tornadus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">trollus</a></td>
+              <td>
+                <p><img src="../files/trollus.jpeg"></p>
+              </td>
+              <td><a href="../files/trollus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Lili">turkus</a></td>
               <td>
                 <p><img src=../files/turkus.jpeg></p>
@@ -965,6 +993,13 @@
                 <p><img src=../files/vegetus.jpeg></p>
               </td>
               <td><a href="../files/vegetus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">villajus</a></td>
+              <td>
+                <p><img src="../files/villajus.jpeg"></p>
+              </td>
+              <td><a href="../files/villajus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>virus</td>
@@ -1062,12 +1097,12 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Remerciements</h2>
-        <p>Merci aux <b class="ref">20</b> artistes:</p>
+        <p>Merci aux <b class="ref">21</b> artistes:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> et <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Voir @XNinjaYmZ sur GitHub">XNinja</a></b> pour <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stickmus</code>, <code>uranus</code> et <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Voir @XNinjaYmZ sur GitHub">XNinja</a></b> pour <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> et <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> pour <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> pour <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code>,</li>
@@ -1085,6 +1120,7 @@
           <li id="AN-Abat"><b>Abat</b> pour <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> pour <code>ahmonzbobus</code>,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> pour <code>crashus</code> et <code>questionus</code>,</li>
+          <li id="AN-Benjaminouille"><b>Benjaminouille</b> pour <code>enormongus</code> et <code>villajus</code></li>
         </ul>
         <p>Légende:</p>
         <ul>
