--- a/tr/index.html
+++ b/tr/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">129</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">134</b></p>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
           <thead>
@@ -344,6 +344,13 @@
               <td><a href="../files/coca-colus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">contrairus</a></td>
+              <td>
+                <p><img src="../files/contrairus.jpeg"></p>
+              </td>
+              <td><a href="../files/contrairus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>cosmonus</td>
               <td>
                 <p><img src=../files/cosmonus.jpeg></p>
@@ -419,6 +426,13 @@
                 <p><img src=../files/educatus.jpeg></p>
               </td>
               <td><a href="../files/educatus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">enormongus</a></td>
+              <td>
+                <p><img src="../files/enormongus.jpeg"></p>
+              </td>
+              <td><a href="../files/enormongus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>fishus</td>
@@ -877,6 +891,13 @@
               <td><a href="../files/spidermanus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">stevus</a></td>
+              <td>
+                <p><img src="../files/stevus.jpeg"></p>
+              </td>
+              <td><a href="../files/stevus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-XNinja">stickmus</a></td>
               <td>
                 <p><img src=../files/stickmus.jpeg></p>
@@ -940,6 +961,13 @@
               <td><a href="../files/tornadus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">trollus</a></td>
+              <td>
+                <p><img src="../files/trollus.jpeg"></p>
+              </td>
+              <td><a href="../files/trollus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Lili">turkus</a></td>
               <td>
                 <p><img src=../files/turkus.jpeg></p>
@@ -966,6 +994,13 @@
                 <p><img src=../files/vegetus.jpeg></p>
               </td>
               <td><a href="../files/vegetus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Benjaminouille">villajus</a></td>
+              <td>
+                <p><img src="../files/villajus.jpeg"></p>
+              </td>
+              <td><a href="../files/villajus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>virus</td>
@@ -1063,12 +1098,12 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Teșekkürler</h2>
-        <p><b class="ref">20</b> sanatçılara teşekkürler:</p>
+        <p><b class="ref">21</b> sanatçılara teşekkürler:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stickmus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
@@ -1086,6 +1121,7 @@
           <li id="AN-Abat"><b>Abat</b> <code>paintus</code> için,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> <code>ahmonzbobus</code> için,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> <code>crashus</code> ve <code>questionus</code> için,</li>
+          <li id="AN-Benjaminouille"><b>Benjaminouille</b> <code>enormongus</code> ve <code>villajus</code> için,</li>
         </ul>
         <p>Açıklama:</p>
         <ul>
