New character and artist!

--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">134</b></p>
+        <p align="center">Total number of members: <b class="ref">135</b></p>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
           <thead>
@@ -496,6 +496,13 @@
                 <p><img src=../files/gokus.jpeg></p>
               </td>
               <td><a href="../files/gokus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Jiwon">gourdus</a></td>
+              <td>
+                <p><img src="../files/gourdus.jpeg"></p>
+              </td>
+              <td><a href="../files/gourdus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">grogus</a></td>
@@ -1098,7 +1105,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Acknowledgements</h2>
-        <p>Thanks to the <b class="ref">21</b> artists:</p>
+        <p>Thanks to the <b class="ref">22</b> artists:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
@@ -1121,7 +1128,8 @@
           <li id="AN-Abat"><b>Abat</b> for <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> for <code>ahmonzbobus</code>,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> for <code>crashus</code> and <code>questionus</code>,</li>
-          <li id="AN-Benjaminouille"><b>Benjaminouille</b> for <code>enormongus</code> and <code>villajus</code></li>
+          <li id="AN-Benjaminouille"><b>Benjaminouille</b> for <code>enormongus</code> and <code>villajus</code>,</li>
+          <li id="AN-Jiwon"><b>Jiwon</b> for <code>gourdus</code>,</li>
         </ul>
         <p>Caption:</p>
         <ul>
