--- a/fr/index.html
+++ b/fr/index.html
@@ -107,7 +107,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">134</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">135</b></p>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
           <thead>
@@ -495,6 +495,13 @@
                 <p><img src=../files/gokus.jpeg></p>
               </td>
               <td><a href="../files/gokus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Jiwon">gourdus</a></td>
+              <td>
+                <p><img src="../files/gourdus.jpeg"></p>
+              </td>
+              <td><a href="../files/gourdus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">grogus</a></td>
@@ -1097,7 +1104,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Remerciements</h2>
-        <p>Merci aux <b class="ref">21</b> artistes:</p>
+        <p>Merci aux <b class="ref">22</b> artistes:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
@@ -1120,7 +1127,8 @@
           <li id="AN-Abat"><b>Abat</b> pour <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> pour <code>ahmonzbobus</code>,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> pour <code>crashus</code> et <code>questionus</code>,</li>
-          <li id="AN-Benjaminouille"><b>Benjaminouille</b> pour <code>enormongus</code> et <code>villajus</code></li>
+          <li id="AN-Benjaminouille"><b>Benjaminouille</b> pour <code>enormongus</code> et <code>villajus</code>,</li>
+          <li id="AN-Jiwon"><b>Jiwon</b> pour <code>gourdus</code>,</li>
         </ul>
         <p>Légende:</p>
         <ul>
