--- a/tr/index.html
+++ b/tr/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">134</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">135</b></p>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
           <thead>
@@ -496,6 +496,13 @@
                 <p><img src=../files/gokus.jpeg></p>
               </td>
               <td><a href="../files/gokus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Jiwon">gourdus</a></td>
+              <td>
+                <p><img src="../files/gourdus.jpeg"></p>
+              </td>
+              <td><a href="../files/gourdus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">grogus</a></td>
@@ -1098,7 +1105,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Teșekkürler</h2>
-        <p><b class="ref">21</b> sanatçılara teşekkürler:</p>
+        <p><b class="ref">22</b> sanatçılara teşekkürler:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
@@ -1122,6 +1129,7 @@
           <li id="AN-Ducky-duck"><b>Ducky duck</b> <code>ahmonzbobus</code> için,</li>
           <li id="AN-Kookanonym"><b>Kookanonym</b> <code>crashus</code> ve <code>questionus</code> için,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> <code>enormongus</code> ve <code>villajus</code> için,</li>
+          <li id="AN-Jiwon"><b>Jiwon</b> <code>gourdus</code> için,</li>
         </ul>
         <p>Açıklama:</p>
         <ul>
