--- a/fr/character.html
+++ b/fr/character.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-title" content="Comment créer un personnage? | Armus">
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
