--- a/tr/index.html
+++ b/tr/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
     <script src="../main.js" async></script>
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous" async></script>
+    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous" async></script>
   </head>
 
   <body>
