❗ | Temporary solution for MaxCDN outage (Twemoji) * Changed script's link to one hosted by @jdecked

--- a/fr/character.html
+++ b/fr/character.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-title" content="Comment créer un personnage? | Armus">
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
-    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
