--- a/en/character.html
+++ b/en/character.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-title" content="How to create a character? | Armus EN">
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#06002b">
-    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
