🖍️ | Moved from Twemoji to Noto Sans Emoji * No JavaScript needed and supports more platforms.

--- a/fr/index.html
+++ b/fr/index.html
@@ -17,7 +17,6 @@
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
     <script src="../main.js" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous" async></script>
   </head>
 
   <body>
@@ -1152,7 +1151,7 @@
           <li>Police: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
           <li>Icônes: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Icônes de marque: <a href="https://simpleicons.org">Simple Icons</a></li>
-          <li>Emojis: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
+          <li>Emojis: <a href="https://fonts.google.com/noto/specimen/Noto+Color+Emoji">Noto Color Emoji</a></li>
           <li>Hébergement: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
