--- a/tr/index.html
+++ b/tr/index.html
@@ -17,7 +17,6 @@
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
     <script src="../main.js" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous" async></script>
   </head>
 
   <body>
@@ -1153,7 +1152,7 @@
           <li>Yazı tipi: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
           <li>Simgeler: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Marka simgeleri: <a href="https://simpleicons.org">Simple Icons</a></li>
-          <li>Emojiler: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
+          <li>Emojiler: <a href="https://fonts.google.com/noto/specimen/Noto+Color+Emoji">Noto Color Emoji</a></li>
           <li>Barındırlama: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
