✒️ | Fixed translation + details * New character * Revert removal of `goldlink` in style.css + edit * Added Javascript: `/en/character.html` backbutton redirects to Turkish version when launched from Turkish * `character.html` backbutton redirects to `./#character`

--- a/en/index.html
+++ b/en/index.html
@@ -87,16 +87,16 @@
         <h2>🏅 Medals</h2>
         <p align="center">
           <img src="../other/achievements/creation.png" height=200 title="Creation of the project">
-          <img src="../other/achievements/25-membres.png" height=200 title="25 members in the army!">
+          <img src="../other/achievements/25-members.png" height=200 title="25 members in the army!">
           <img src="../other/achievements/certif.png" height=200 title="Project qualified as art by an expert!">
-          <img src="../other/achievements/site.png" height=200 title="Opening of the website!">
-          <img src="../other/achievements/50-membres.png" height=200 title="50 members in the army!">
-          <img src=../other/achievements/10-contributeurs.png height=200 title="10 artists!">
-          <img src=../other/achievements/75-membres.png height=200 title="75 members in the army!">
+          <img src="../other/achievements/website.png" height=200 title="Opening of the website!">
+          <img src="../other/achievements/50-members.png" height=200 title="50 members in the army!">
+          <img src=../other/achievements/10-artists.png height=200 title="10 artists!">
+          <img src=../other/achievements/75-members.png height=200 title="75 members in the army!">
           <img src="../other/achievements/100-commits.png" height="200" title="100 commits on GitHub!">
-          <img src=../other/achievements/traduction.png height=200 title="Website's translation">
-          <img src=../other/achievements/100-membres.png height=200 title="100 members in the army! 🎊">
-          <img src=../other/achievements/20-contributeurs.png height=200 title="20 artists!">
+          <img src=../other/achievements/translate.png height=200 title="Website's translation">
+          <img src=../other/achievements/100-members.png height=200 title="100 members in the army! 🎊">
+          <img src=../other/achievements/20-artists.png height=200 title="20 artists!">
         </p>
         <div class="spaceline"></div>
       </div>
@@ -104,9 +104,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">139</b></p>
+        <p align="center">Total number of members: <b class="ref">140</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 92.7%">139/150</div>
+          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
@@ -551,6 +551,13 @@
                 <p><img src=../pics/icecreamus.jpeg></p>
               </td>
               <td><a href="../pics/icecreamus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>impasta</td>
+              <td>
+                <p><img src="../pics/impasta.jpeg"></p>
+              </td>
+              <td><a href="../pics/impasta.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">impostor</a></td>
