--- a/fr/index.html
+++ b/fr/index.html
@@ -84,16 +84,16 @@
         <h2>🏅 Médailles</h2>
         <p align="center">
           <img src="../other/achievements/creation.png" height=200 title="Création du projet">
-          <img src="../other/achievements/25-membres.png" height=200 title="25 membres dans l'armée!">
+          <img src="../other/achievements/25-members.png" height=200 title="25 membres dans l'armée!">
           <img src="../other/achievements/certif.png" height=200 title="Projet qualifié d'art par un expert!">
-          <img src="../other/achievements/site.png" height=200 title="Ouverture du site!">
-          <img src="../other/achievements/50-membres.png" height=200 title="50 membres dans l'armée!">
-          <img src=../other/achievements/10-contributeurs.png height=200 title="10 artistes!">
-          <img src=../other/achievements/75-membres.png height=200 title="75 membres dans l'armée!">
+          <img src="../other/achievements/website.png" height=200 title="Ouverture du site!">
+          <img src="../other/achievements/50-members.png" height=200 title="50 membres dans l'armée!">
+          <img src=../other/achievements/10-artists.png height=200 title="10 artistes!">
+          <img src=../other/achievements/75-members.png height=200 title="75 membres dans l'armée!">
           <img src="../other/achievements/100-commits.png" height="200" title="100 commits sur GitHub!">
-          <img src=../other/achievements/traduction.png height=200 title="Traduction du site">
-          <img src=../other/achievements/100-membres.png height=200 title="100 membres dans l'armée! 🎊">
-          <img src=../other/achievements/20-contributeurs.png height=200 title="20 artistes!">
+          <img src=../other/achievements/translate.png height=200 title="Traduction du site">
+          <img src=../other/achievements/100-members.png height=200 title="100 membres dans l'armée! 🎊">
+          <img src=../other/achievements/20-artists.png height=200 title="20 artistes!">
         </p>
         <div class="spaceline"></div>
       </div>
@@ -101,9 +101,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">139</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">140</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 92.7%">139/150</div>
+          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
         </div>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
@@ -548,6 +548,13 @@
                 <p><img src=../pics/icecreamus.jpeg></p>
               </td>
               <td><a href="../pics/icecreamus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>impasta</td>
+              <td>
+                <p><img src="../pics/impasta.jpeg"></p>
+              </td>
+              <td><a href="../pics/impasta.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">impostor</a></td>
