--- a/tr/index.html
+++ b/tr/index.html
@@ -85,16 +85,16 @@
         <h2>🏅 Madalyalar</h2>
         <p align="center">
           <img src="../other/achievements/creation.png" height=200 title="Projenin oluşturulması">
-          <img src="../other/achievements/25-membres.png" height=200 title="Orduda 25 üye!">
+          <img src="../other/achievements/25-members.png" height=200 title="Orduda 25 üye!">
           <img src="../other/achievements/certif.png" height=200 title="Bir uzman tarafından sanat adı verildi!">
-          <img src="../other/achievements/site.png" height=200 title="Sitenin açılması!">
-          <img src="../other/achievements/50-membres.png" height=200 title="Orduda 50 üye!">
-          <img src=../other/achievements/10-contributeurs.png height=200 title="10 sanatçılar!">
-          <img src=../other/achievements/75-membres.png height=200 title="Orduda 75 üye!">
+          <img src="../other/achievements/website.png" height=200 title="Sitenin açılması!">
+          <img src="../other/achievements/50-members.png" height=200 title="Orduda 50 üye!">
+          <img src=../other/achievements/10-artists.png height=200 title="10 sanatçılar!">
+          <img src=../other/achievements/75-members.png height=200 title="Orduda 75 üye!">
           <img src="../other/achievements/100-commits.png" height="200" title="GitHub'da 100 commits!">
-          <img src=../other/achievements/traduction.png height=200 title="Web sitenin çevirisi">
-          <img src=../other/achievements/100-membres.png height=200 title="Orduda 100 üye! 🎊">
-          <img src=../other/achievements/20-contributeurs.png height=200 title="20 sanatçılar!">
+          <img src=../other/achievements/translate.png height=200 title="Web sitenin çevirisi">
+          <img src=../other/achievements/100-members.png height=200 title="Orduda 100 üye! 🎊">
+          <img src=../other/achievements/20-artists.png height=200 title="20 sanatçılar!">
         </p>
         <div class="spaceline"></div>
       </div>
@@ -102,9 +102,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">139</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">140</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 92.7%">139/150</div>
+          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
         </div>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
@@ -549,6 +549,13 @@
                 <p><img src=../pics/icecreamus.jpeg></p>
               </td>
               <td><a href="../pics/icecreamus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>impasta</td>
+              <td>
+                <p><img src="../pics/impasta.jpeg"></p>
+              </td>
+              <td><a href="../pics/impasta.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">impostor</a></td>
@@ -1119,7 +1126,7 @@
       <div id="character">
         <h2>🎨 Bir karakter yarat</h2>
         <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki düğme tıklayarak rehberi açabilirsiniz.</p>
-        <a href="../en/character.html" class="nounderline">
+        <a href="../en/character.html?lang=tr" class="nounderline">
           <div class="styled-btn text-btn color-tr">
             <div>Rehber: bir karakter nasıl oluşturulur ? (İngilizce)</div>
           </div>
