--- a/fr/character.html
+++ b/fr/character.html
@@ -16,138 +16,156 @@
   </head>
 
   <body>
+
+    <!-- Top bar -->
     <div class="topback color-fr">
-      <a href=".">
-        <span id="backbutton" class="material-icons-round">arrow_back_ios</span>
+      <a href="./#character" id="backbutton" >
+        <span class="material-icons-round">arrow_back_ios</span>
       </a>
       <h4>Comment créer un personnage?</h4>
     </div>
+
     <section id="two">
-      <h2>❓ Choisissez la technique:</h2>
-      <p>Pour faire votre personnage, vous pouvez:</p>
-      <ul class="goldlink">
-        <li><a href="#dessin">Dessiner sur l'image originale</a>,</li>
-        <li><a href="#ap-custom">Créer un arrière-plan customisé</a>,</li>
-        <li><a href="#perso-custom">Créer un personnage customisé</a>,</li>
-        <li><a href="#idee">Donner votre idée</a>,
-        </li>
-      </ul>
-      <blockquote>
-        <p>Vous pouvez aussi combiner plusieurs techniques afin de faire un meilleur personnage!</p>
-        <p><strong>Exemples:</strong> cactus, fishus ou icecreamus</p>
-      </blockquote>
-      <div class="spaceline"></div>
-      <h2 id="dessin">🎨 Dessiner sur l'image normale:</h2>
-      <p><strong>Exemples:</strong> amoga, gokus, perdus</p>
-      <ul>
-        <li>Téléchargez l'image du personnage <a
-             href="../files/amogus.jpeg"
-             download>amogus</a>,</li>
-        <li>Créez un nouveau document dans votre application de dessin:<ul>
-            <li>Hauteur: 1101px,</li>
-            <li>Largeur: 689px,</li>
-          </ul>
-        </li>
-        <li>Importez l'image dans votre application de dessin:</li>
-        <li>Dessinez quelque chose d'original,</li>
-        <li>✈ <a href="#envoyer">Envoyez votre personnage</a></li>
-      </ul>
-      <div class="spaceline"></div>
-      <h2 id="ap-custom">🖼 Dessiner un arrière-plan customisé:</h2>
-      <p><strong>Exemple:</strong> cosmonus</p>
-      <ul>
-        <li>Téléchargez l'image du personnage amogus sans arrière-plan <a
-             href="../other/creation-personnages/amogus-transparent.png"
-             download>ici</a>,
-        </li>
-        <li>Créez un nouveau document dans votre application de dessin:<ul>
-            <li>Hauteur: 1101px,</li>
-            <li>Largeur: 689px,</li>
-          </ul>
-        </li>
-        <li>Dessinez un arrière-plan,</li>
-        <li>Importez l'amogus transparent (et dessinez quelque chose d'original sur le personnage),</li>
-        <li>✈ <a href="#envoyer">Envoyez votre personnage</a></li>
-      </ul>
-      <div class="spaceline"></div>
-      <h2 id="perso-custom">🤺 Dessin avec un personnage différent:</h2>
-      <p><strong>Exemples:</strong> abigus, airmogus, bushus</p>
-      <ul>
-        <li>Téléchargez les images:<ul>
-            <li>De la visière sans le personnage <a
-                 href="../other/creation-personnages/visiere.png"
-                 download>ici</a>,
-            </li>
-            <li>Et de l'arrière-plan <a
-                 href="../other/creation-personnages/arriere-plan.jpeg"
-                 download>ici</a>,
-            </li>
-          </ul>
-        </li>
-        <li>Créez un nouveau document dans votre application de dessin:<ul>
-            <li>Hauteur: 1101px,</li>
-            <li>Largeur: 689px,</li>
-          </ul>
-        </li>
-        <li>Importez l'arrière-plan,</li>
-        <li>Créez un personnage,</li>
-        <li>Importez la visière,</li>
-        <li>✈ <a href="#envoyer">Envoyez votre personnage</a></li>
-      </ul>
-      <div class="spaceline"></div>
-      <h2 id="idee">💡 Vous avez une idée ?</h2>
-      <p><strong>Exemples:</strong> <a href="https://github.com/Apix0n/Armus/issues/7">wizardus</a></p>
-      <ul>
-        <li>Écrivez le nom du personnage, </li>
-        <li>Décrivez à quoi il doit ressembler,</li>
-        <li>(Décrivez l'arrière-plan),</li>
-        <li>Envoyez votre idée:<ul>
-            <li>Créez une issue <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">ici</a> avec
-              le
-              modèle
-              "Idée de personnage"<blockquote>
-                <p>Quelqu'un de volontaire dessinera votre personnage, que ce soit un membre du projet ou
-                  non.</p>
-              </blockquote>
-            </li>
-            <li>Ou envoyez votre idée à <strong>Apix</strong></li>
-          </ul>
-        </li>
-      </ul>
-      <div class="spaceline"></div>
-      <h2 id="envoyer">✉ Envoyer le personnage:</h2>
-      <ul>
-        <li>Exportez votre dessin en <code>.jpeg</code> si possible,</li>
-        <li>Donnez lui un nom:<ul>
-            <li>Terminant par <code>-us</code> si c'est un garçon,</li>
-            <li>Ou terminant par <code>-a</code> si c'est une fille</li>
-          </ul>
-        </li>
-        <li>Envoyez le tout:<ul>
-            <li>Créez une issue <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">sur
-                GitHub</a> avec
-              le
-              modèle "Ajout de personnage"<blockquote>
-                <p>Votre nom dans les remerciements sera votre nom d'utilisateur sur GitHub si aucun autre
-                  n'est
-                  précisé.</p>
-              </blockquote>
-            </li>
-            <li>Ou envoyez à <strong>Apix</strong>:<ul>
-                <li>L'image du personnage, </li>
-                <li>Son nom, </li>
-                <li>Et le nom sous lequel vous voulez apparaître dans les remerciements.</li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <p><strong>❗ Chaque personnage doit avoir la visière visible, sinon il sera refusé.</strong></p>
+
+      <!-- Choose your technique -->
+      <div id="technique">
+        <h2>❓ Choisissez la technique:</h2>
+        <p>Pour faire votre personnage, vous pouvez:</p>
+        <ul class="goldlink">
+          <li><a href="#drawing">Dessiner sur l'image originale</a>,</li>
+          <li><a href="#ap-custom">Créer un arrière-plan customisé</a>,</li>
+          <li><a href="#perso-custom">Créer un personnage customisé</a>,</li>
+          <li><a href="#idee">Donner votre idée</a>,</li>
+        </ul>
+        <blockquote>
+          <p>Vous pouvez aussi combiner plusieurs techniques afin de faire un meilleur personnage!</p>
+          <p><strong>Exemples:</strong> cactus, fishus or icecreamus</p>
+        </blockquote>
+        <div class="spaceline"></div>
+      </div>
+
+      <!-- Draw on the original image -->
+      <div id="drawing">
+        <h2>🎨 Dessiner sur l'image normale:</h2>
+        <p><strong>Exemples:</strong> amoga, gokus, perdus</p>
+        <ul>
+          <li>Téléchargez l'image du personnage <a href="../pics/amogus.jpeg" download>amogus</a>,</li>
+          <li>Créez un nouveau document dans votre application de dessin:
+            <ul>
+              <li>Hauteur: 1101px,</li>
+              <li>Largeur: 689px,</li>
+            </ul>
+          </li>
+          <li>Importez l'image dans votre application de dessin,</li>
+          <li>Dessinez quelque chose d'original,</li>
+          <li>✈ <a href="#send">Envoyez votre personnage</a></li>
+        </ul>
+        <div class="spaceline"></div>
+      </div>
+
+      <!-- Create a custom background -->
+      <div id="background">
+        <h2>🖼 Créer un arriere-plan customisé:</h2>
+        <p><strong>Exemple:</strong> cosmonus</p>
+        <ul>
+          <li>Téléchargez l'image du personnage amogus sans l'arrière-plan <a href="../other/create-a-character/transparent-amogus.png" download>ici</a>,</li>
+          <li>Créez un nouveau document dans votre application de dessin:
+            <ul>
+              <li>Hauteur: 1101px,</li>
+              <li>Largeur: 689px,</li>
+            </ul>
+          </li>
+          <li>Dessinez un arrière-plan,</li>
+          <li>Importez l'amogus (et dessinez quelque chose d'original dessus),</li>
+          <li>✈ <a href="#send">Envoyez votre personnage</a></li>
+        </ul>
+        <div class="spaceline"></div>
+      </div>
+
+      <!-- Create a different character -->
+      <div id="character">
+        <h2>🤺 Créer un personnage différent:</h2>
+        <p><strong>Exemples:</strong> abigus, airmogus, bushus</p>
+        <ul>
+          <li>Téléchargez les images:
+            <ul>
+              <li>De la visière sans le personnage <a href="../other/create-a-character/visor.png" download>ici</a>,</li>
+              <li>Et de l'arrière-plan <a href="../other/create-a-character/background.jpeg" download>ici</a>,</li>
+            </ul>
+          </li>
+          <li>Créez un nouveau document dans votre application de dessin:
+            <ul>
+              <li>Hauteur: 1101px,</li>
+              <li>Largeur: 689px,</li>
+            </ul>
+          </li>
+          <li>Importez l'arrière-plan,</li>
+          <li>Créez un personnage,</li>
+          <li>Importez la visière,</li>
+          <li>✈ <a href="#send">Envoyez votre personnage</a></li>
+        </ul>
+        <div class="spaceline"></div>
+      </div>
+
+      <!-- You have an idea? -->
+      <div id="idea">
+        <h2>💡 Vous avez une idée ?</h2>
+        <p><strong>Exemples:</strong> <a href="https://github.com/Apix0n/Armus/issues/7">wizardus</a></p>
+        <ul>
+          <li>Écrivez le nom du personnage,</li>
+          <li>Décrivez à quoi le personnage doit ressembler,</li>
+          <li>(Décrivez le paysage),</li>
+          <li>Envoyez votre idée:
+            <ul>
+              <li>Créez une issue <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">ici</a> avec le modèle "Character idea"
+                <blockquote>
+                  <p>Quelqu'un de volontaire peut dessiner votre personnage, que ce soit un membre du projet ou non.</p>
+                </blockquote>
+              </li>
+              <li>Ou envoyez votre idée à <strong>Apix</strong></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="spaceline"></div>
+      </div>
+
+      <!-- Send the character -->
+      <div id="send">
+        <h2>✉ Envoyer le personnage</h2>
+        <ul>
+          <li>Exportez le personnage en <code>.jpeg</code> si possible,</li>
+          <li>Donnez lui un nom qui:
+            <ul>
+              <li>Devrait finir par <code>-us</code> si c'est un garçon,</li>
+              <li>Ou qui devrait se finir par <code>-a</code> si c'est une fille</li>
+            </ul>
+          </li>
+          <li>Envoyez le tout:
+            <ul>
+              <li>Créez une issue <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">sur GitHub</a> avec le modèle "Add a character"
+                <blockquote>
+                  <p>Votre nom dans les remerciements sera votre nom d'utilisateur sur GitHub si aucun autre n'est précisé.</p>
+                </blockquote>
+              </li>
+              <li>Ou envoyez directement à <strong>Apix</strong>:
+                <ul>
+                  <li>L'image du personnage,</li>
+                  <li>Son nom,</li>
+                  <li>Et le nom sous lequel vous voulez apparaître dans les remerciements.</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <p><strong>❗ Chaque personnage doit avoir une visière, sinon il sera refusé.</strong></p>
+      </div>
     </section>
+
+    <!-- Navbar -->
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank">Créé par Apix avec ❤</a></li>
+          <li><a href="https://github.com/Apix0n" target="_blank">Créé par Apix avec ❤ | 2022-2023</a></li>
         </ul>
       </div>
     </section>
