🎨 | Added new character

--- a/fr/index.html
+++ b/fr/index.html
@@ -101,9 +101,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">140</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">141</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
+          <div class="progressbar-inside" style="width: 94%">141/150</div>
         </div>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
@@ -957,6 +957,13 @@
               <td><a href="../pics/superherus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-GaimeLeZuitres">tacus</a></td>
+              <td>
+                <p><img src="../pics/tacus.jpeg"></p>
+              </td>
+              <td><a href="../pics/tacus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">tchoupius</a></td>
               <td>
                 <p><img src=../pics/tchoupius.jpeg></p>
@@ -1136,7 +1143,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Remerciements</h2>
-        <p>Merci aux <b class="ref">22</b> artistes:</p>
+        <p>Merci aux <b class="ref">23</b> artistes:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
@@ -1161,6 +1168,7 @@
           <li id="AN-Kookanonym"><b>Kookanonym</b> pour <code>crashus</code> et <code>questionus</code>,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> pour <code>enormongus</code> et <code>villajus</code>,</li>
           <li id="AN-Jiwon"><b>Jiwon</b> pour <code>gourdus</code>,</li>
+          <li id="AN-GaimeLeZuitres"><b>GaimeLéZuitres</b> pour <code>tacus</code>,</li>
         </ul>
         <p>Légende:</p>
         <ul>
