--- a/tr/index.html
+++ b/tr/index.html
@@ -102,9 +102,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">140</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">141</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
+          <div class="progressbar-inside" style="width: 94%">141/150</div>
         </div>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
@@ -958,6 +958,13 @@
               <td><a href="../pics/superherus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-GaimeLeZuitres">tacus</a></td>
+              <td>
+                <p><img src="../pics/tacus.jpeg"></p>
+              </td>
+              <td><a href="../pics/tacus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">tchoupius</a></td>
               <td>
                 <p><img src=../pics/tchoupius.jpeg></p>
@@ -1137,7 +1144,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Teșekkürler</h2>
-        <p><b class="ref">22</b> sanatçılara teşekkürler:</p>
+        <p><b class="ref">23</b> sanatçılara teşekkürler:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
@@ -1162,6 +1169,7 @@
           <li id="AN-Kookanonym"><b>Kookanonym</b> <code>crashus</code> ve <code>questionus</code> için,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> <code>enormongus</code> ve <code>villajus</code> için,</li>
           <li id="AN-Jiwon"><b>Jiwon</b> <code>gourdus</code> için,</li>
+          <li id="AN-GaimeLeZuitres"><b>GaimeLéZuitres</b> <code>tacus</code> için,</li>
         </ul>
         <p>Açıklama:</p>
         <ul>
