--- a/en/index.html
+++ b/en/index.html
@@ -104,9 +104,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">140</b></p>
+        <p align="center">Total number of members: <b class="ref">141</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 93.3%">140/150</div>
+          <div class="progressbar-inside" style="width: 94%">141/150</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
@@ -960,6 +960,13 @@
               <td><a href="../pics/superherus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-GaimeLeZuitres">tacus</a></td>
+              <td>
+                <p><img src="../pics/tacus.jpeg"></p>
+              </td>
+              <td><a href="../pics/tacus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">tchoupius</a></td>
               <td>
                 <p><img src=../pics/tchoupius.jpeg></p>
@@ -1139,7 +1146,7 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Acknowledgements</h2>
-        <p>Thanks to the <b class="ref">22</b> artists:</p>
+        <p>Thanks to the <b class="ref">23</b> artists:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
@@ -1164,6 +1171,7 @@
           <li id="AN-Kookanonym"><b>Kookanonym</b> for <code>crashus</code> and <code>questionus</code>,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> for <code>enormongus</code> and <code>villajus</code>,</li>
           <li id="AN-Jiwon"><b>Jiwon</b> for <code>gourdus</code>,</li>
+          <li id="AN-GaimeLeZuitres"><b>GaimeLéZuitres</b> for <code>tacus</code>,</li>
         </ul>
         <p>Caption:</p>
         <ul>
